# tris

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  format.sh  pyproject.toml  regenerate_figures.py  setup.sh  setup_linux.sh  sync_cluster.ps1
.devcontainer/: devcontainer.json
.githooks/: README.md  pre-push
cluster/: aliases.sh  chain_next.sh  clean.sh  clean_model.sh  eval.sh  eval_baseline.sh  eval_grpo.sh  run_all.sh  setup.sh  train.sh
docs/: CLUSTER.md  MODELS.md  QUICK_SETUP.md  REFERENCES.md  REPORT.md  SLURM_COMMANDS.md
experiments/configs/: baseline.yaml  grpo.yaml  grpo_cluster.yaml  grpo_colab.yaml  grpo_gemma2.yaml  grpo_gemma2_think.yaml  grpo_qwen05.yaml  grpo_qwen05_think.yaml  grpo_smollm2_135m.yaml  grpo_smollm2_135m_think.yaml  grpo_smollm2_360m.yaml  grpo_smollm2_360m_think.yaml  grpo_tinyllama.yaml  grpo_tinyllama_think.yaml  sft.yaml
experiments/configs/nothink/curriculum/: grpo_gemma2.yaml  grpo_qwen05.yaml  grpo_smollm2_135m.yaml  grpo_smollm2_360m.yaml  grpo_tinyllama.yaml
experiments/configs/nothink/standard/: grpo_gemma2.yaml  grpo_qwen05.yaml  grpo_smollm2_135m.yaml  grpo_smollm2_360m.yaml  grpo_tinyllama.yaml
experiments/configs/think/curriculum/: grpo_gemma2.yaml  grpo_qwen05.yaml  grpo_smollm2_135m.yaml  grpo_smollm2_360m.yaml  grpo_tinyllama.yaml
experiments/configs/think/standard/: grpo_gemma2.yaml  grpo_qwen05.yaml  grpo_smollm2_135m.yaml  grpo_smollm2_360m.yaml  grpo_tinyllama.yaml
experiments/logs/grpo/gemma2-2b/: baseline_results.json
experiments/logs/grpo/gemma2-2b/eval_20260404_195549/: comparison.json  completions_baseline.json  completions_stage_3_full_difficulty.json  eval_stage_1_format_basics.json  eval_stage_2_progressive.json  eval_stage_3_full_difficulty.json
experiments/logs/grpo/nothink/curriculum/gemma2-2b/: baseline_results.json
experiments/logs/grpo/nothink/curriculum/qwen25-05b/: baseline_results.json
experiments/logs/grpo/nothink/curriculum/smollm2-135m/: baseline_results.json
experiments/logs/grpo/nothink/curriculum/smollm2-360m/: baseline_results.json
experiments/logs/grpo/nothink/qwen25-05b/: baseline_results.json
experiments/logs/grpo/nothink/smollm2-135m/: baseline_results.json
experiments/logs/grpo/nothink/tinyllama-11b/: baseline_results.json
experiments/logs/grpo/qwen25-05b/eval_20260404_045440/: completions_stage_1_format_basics.json  completions_stage_3_full_difficulty.json  eval_stage_1_format_basics.json  eval_stage_2_progressive.json  eval_stage_3_full_difficulty.json
experiments/logs/grpo/smollm2-135m/eval_20260403_213246/: completions_stage_1_format_basics.json  eval_stage_1_format_basics.json  eval_stage_2_progressive.json  eval_stage_3_full_difficulty.json
experiments/logs/grpo/smollm2-360m/: baseline_results.json
experiments/logs/grpo/smollm2-360m/eval_20260404_014114/: comparison.json  completions_stage_1_format_basics.json  completions_stage_2_progressive.json  completions_stage_3_full_difficulty.json  eval_stage_1_format_basics.json  eval_stage_2_progressive.json  eval_stage_3_full_difficulty.json
experiments/logs/grpo/tinyllama-11b/eval_20260404_081506/: completions_stage_2_progressive.json  eval_stage_1_format_basics.json  eval_stage_2_progressive.json  eval_stage_3_full_difficulty.json
notebooks/: 01_test_config_and_train.ipynb  02_test_config_and_train_fast.ipynb  03_full_pipeline.ipynb  Llama3_1_(8B)_GRPO.ipynb
notebooks/reference/: Advanced_Llama3_2_(3B)_GRPO_LoRA.ipynb  Llama3_1_(8B)_GRPO.ipynb
src/datasets/: dataloader.py  synthetic_dataset.py  templates.py
src/evaluation/: __main__.py  baseline_eval.py  eval_baseline.py  eval_dataset.py  eval_grpo.py  evaluate.py
src/models/: model_loader.py
src/training/: __main__.py  callbacks.py  grpo_custom.py  grpo_train.py  grpo_vanilla.py  rewards.py  sft_train.py
src/utils/: chain_monitor.py  compare_think.py  config.py  distributed.py  live_training_table.py  show_training_log.py  visualization.py
tests/: test_rewards.py
(+165 files in other folders)
