[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "grpo-strict-generation"
version = "0.1.0"
description = "Align a Small LLM with GRPO for Strict Code/JSON Generation (Track 23)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"

dependencies = [
    # Core ML
    "torch",
    "transformers",
    "trl>=0.22,<0.24",
    "peft",
    "datasets",
    "accelerate",
    "bitsandbytes",
    # Data & Eval
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    # Infra
    "pyyaml",
    "tensorboard",
    "wandb",
    "python-dotenv",
    "tqdm",
    "jupyter",
    "ipywidgets",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black[jupyter]",
    "ruff",
    "pytest",
]
fast = [
    "unsloth",
    "vllm",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-include = ["*.ipynb"]
exclude = ["notebooks/reference/**"]

[tool.uv]
constraint-dependencies = ["pydantic>=1.10.18"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821", "F401"]
